Revision history for Perl extension App-Koyomi

{{$NEXT}}

2015-05-29 v0.1.4  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>

    - Fix: Include script/koyomi to dist package

2015-05-28 v0.1.3  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>

    - Fix: Module requirements in META.json

2015-05-28 v0.1.2  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>

    - Fix: Module requirements in META.json

2015-05-28 v0.1.1  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>

    - Fix: Some wrongness of PODs related to Teng DataSource

2015-05-28 v0.1.0  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>

    - Initial Release.
    - Feature: koyomi worker job scheduler
    - Feature: Customizable config file
    - Feature: Teng w/ MySQL support for Job Datastore
    - Feature: Lock record for Teng w/ MySQL not to run job coincidently
