@@ -19,58 +19,58 @@ name: App-Koyomi
 provides:
   App::Koyomi:
     file: lib/App/Koyomi.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::Config:
     file: lib/App/Koyomi/Config.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::Context:
     file: lib/App/Koyomi/Context.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::DataSource::Job:
     file: lib/App/Koyomi/DataSource/Job.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::DataSource::Job::Teng:
     file: lib/App/Koyomi/DataSource/Job/Teng.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::DataSource::Job::Teng::Data:
     file: lib/App/Koyomi/DataSource/Job/Teng/Data.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::DataSource::Job::Teng::Object:
     file: lib/App/Koyomi/DataSource/Job/Teng/Object.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::DataSource::Job::Teng::Schema:
     file: lib/App/Koyomi/DataSource/Job/Teng/Schema.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::DataSource::Semaphore:
     file: lib/App/Koyomi/DataSource/Semaphore.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::DataSource::Semaphore::Teng:
     file: lib/App/Koyomi/DataSource/Semaphore/Teng.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::DataSource::Semaphore::Teng::Data:
     file: lib/App/Koyomi/DataSource/Semaphore/Teng/Data.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::DataSource::Semaphore::Teng::Object:
     file: lib/App/Koyomi/DataSource/Semaphore/Teng/Object.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::DataSource::Semaphore::Teng::Schema:
     file: lib/App/Koyomi/DataSource/Semaphore/Teng/Schema.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::Job:
     file: lib/App/Koyomi/Job.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::Logger:
     file: lib/App/Koyomi/Logger.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::Schedule:
     file: lib/App/Koyomi/Schedule.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::Semaphore:
     file: lib/App/Koyomi/Semaphore.pm
-    version: v0.1.4
+    version: v0.2.0
   App::Koyomi::Worker:
     file: lib/App/Koyomi/Worker.pm
-    version: v0.1.4
+    version: v0.2.0
 requires:
   Class::Accessor::Lite: '0.08'
   DateTime: '1.18'
@@ -84,4 +84,4 @@ requires:
   Teng: '0.28'
 resources:
   license: http://dev.perl.org/licenses/
-version: v0.1.4
+version: v0.2.0
