@@ -8,7 +8,7 @@ use Class::Accessor::Lite (
 );
 use Smart::Args;
 
-use version; our $VERSION = 'v0.1.4';
+use version; our $VERSION = 'v0.2.0';
 
 # Accessor for jobs.columns
 {
